apps/sportarr/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sportarr-ingress
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sportarr.${DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      services:
        - name: authentik-server
          namespace: auth
          port: http
    - match: Host(`sportarr.${DOMAIN}`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: sportarr
          port: 1867
    - match: Host(`sportarr.${DOMAIN}`)
      kind: Rule
      services:
        - name: sportarr
          port: 1867
      middlewares:
        - name: authentik
          namespace: traefik
